# FYP-buzzz-quadcopter

firmware/esp32_controller/src/: main.cpp
install/: local_setup.sh  setup.sh
install/bzzz_core/share/bzzz_core/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bzzz_core/share/bzzz_core/cmake/: bzzz_coreConfig.cmake
install/bzzz_msgs/include/bzzz_msgs/bzzz_msgs/msg/: rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  sensor_suite.hpp
install/bzzz_msgs/include/bzzz_msgs/bzzz_msgs/msg/detail/: motor_commands__builder.hpp  motor_commands__functions.c  motor_commands__functions.h  motor_commands__rosidl_typesupport_fastrtps_c.h  motor_commands__rosidl_typesupport_introspection_c.h  motor_commands__struct.hpp  motor_commands__type_support.h  motor_commands__type_support.hpp  sensor_suite__builder.hpp  sensor_suite__rosidl_typesupport_fastrtps_c.h  sensor_suite__rosidl_typesupport_fastrtps_cpp.hpp  sensor_suite__rosidl_typesupport_introspection_c.h  sensor_suite__type_support.c  sensor_suite__type_support.h
install/bzzz_msgs/share/bzzz_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bzzz_msgs/share/bzzz_msgs/cmake/: bzzz_msgsConfig.cmake  bzzz_msgs__rosidl_typesupport_cExport-noconfig.cmake  bzzz_msgs__rosidl_typesupport_cppExport-noconfig.cmake  bzzz_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  bzzz_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_bzzz_msgs__rosidl_generator_cExport-noconfig.cmake  export_bzzz_msgs__rosidl_generator_cppExport.cmake  export_bzzz_msgs__rosidl_generator_pyExport-noconfig.cmake  export_bzzz_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/bzzz_msgs/share/bzzz_msgs/msg/: MotorCommands.idl  MotorCommands.msg  SensorSuite.json
install/bzzz_msgs/share/bzzz_msgs/rust/src/msg/: rmw.rs
log/: latest_build
src/bzzz_core/: CMakeLists.txt  package.xml
src/bzzz_core/src/ROS/: esp32_bridge_node.cpp
src/bzzz_core/src/ROS/flight control nodes/: attitude_controller_node.cpp  flight_controller_node.cpp
src/bzzz_core/src/ROS/flight_control_nodes/: altitude_controller_node.cpp
src/bzzz_core/src/ROS/sensor nodes/: imu_node.cpp
src/bzzz_core/src/ROS/sensor_nodes/: anemometer_node.cpp  pressure_node.cpp  tof_node.cpp
src/bzzz_core/src/ROS/utility nodes/: logger_node.cpp  rc_node.cpp
src/bzzz_gazebo/: CMakeLists.txt  package.xml
src/bzzz_gazebo/meshes/: prop.stl
src/bzzz_gazebo/urdf/: bzzz_drone.urdf
src/bzzz_msgs/: CMakeLists.txt  package.xml
src/bzzz_msgs/msg/: PressureData.msg  SensorSuite.msg  TargetThrust.msg
